--- a/src/Abuchyn/AlexBundle/Resources/views/Pages/ushow.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Pages/ushow.html.twig
@@ -64,13 +64,8 @@
                     {{ item.blog|raw }}
                 </div>
                 <div class="col-xs-6 col-md-4">
-                    <a class="btn btn-alexblog" href="{{ path('abuchyn_alex_ushow', { 'id': item.id - 1 }) }}">previous</a>
-                </div>
-                <div class="col-xs-6 col-md-4">
-                    <a class="btn btn-alexblog center-block" href="{{ path ('abuchyn_alex_homepage') }}">Home</a>
-                </div>
-                <div class="col-xs-6 col-md-4">
-                    <a class="btn btn-alexblog" href="{{ path('abuchyn_alex_ushow', { 'id': item.id + 1 }) }}">next</a>
+                    <a class="btn btn-alexblog" href="{{ path('abuchyn_alex_homepage') }}">
+                        <i class="fa fa-step-backward"></i> Back to the list</a>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     {{ item.comments }}
