--- a/src/Abuchyn/AlexBundle/Resources/views/Admin/admin.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Admin/admin.html.twig
@@ -4,7 +4,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ path('items_new') }}"><i class="fa fa-newspaper-o"></i> Create a new item</a></li>
-            <li><a href="{{ path('abuchyn_alex_homepage') }}"><i class="fa fa-lock"></i> Logoff</a></li>
+            <li><a href="{{ path('logout') }}"><i class="fa fa-lock"></i> Logoff</a></li>
         </ul>
     </div>
 {% endblock %}
