--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,14 +10,25 @@
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
+
 <body>
 {% block header %}{% endblock %}
+
+<!-- Body -->
 <div class="container">
     <div class="row">
         {% block body %}{% endblock %}
     </div>
 </div>
 
-{% block footer %}{% endblock %}
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+            {% block footer %}{% endblock %}
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
