--- a/src/Abuchyn/AlexBundle/Resources/views/Pages/ushow.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Pages/ushow.html.twig
@@ -74,3 +74,21 @@
         </div>
     </article>
 {% endblock %}
+
+{% block footer %}
+    <div id="disqus_thread"></div>
+    <script>
+         var disqus_config = function () {
+         this.page.url = 'http://alexey-buchyn.blog/{{ item.id }}';  // Replace PAGE_URL with your page's canonical URL variable
+         this.page.identifier = '{{ item.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+         };
+
+        (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://alex-buchyn-blog.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScrgit reset --soft HEADipt to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+{% endblock %}
