--- a/src/Abuchyn/AlexBundle/Resources/views/Admin/admin.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Admin/admin.html.twig
@@ -14,37 +14,59 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="navbar-fixed-right">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <div class="col-md-12">
+        <div class="col-md-4">
+            <div class="dropdown">
+                <button class="btn btn-alexblog dropdown-toggle" type="button"data-toggle="dropdown">
+                    Отсортировать
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu btn-alexblog">
+                    <li>{{ knp_pagination_sortable(items, 'Title', 'a.title')|raw }}</li>
+                    <li>{{ knp_pagination_sortable(items, 'Author', 'a.author' )|raw }}</li>
+                    <li>{{ knp_pagination_sortable(items, 'Created', 'a.created' )}}</li>
+                </ul>
             </div>
-            <div class="post-preview">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    {% for item in items %}
-                        <a href="{{ path('items_show', { 'id': item.id }) }}">
-                            <h2 class="post-title">
-                                {{ item.title }}
-                            </h2>
-                            {#<h3 class="post-subtitle">
-                                Problems look mighty small from 150 miles up
-                            </h3>#}
-                        </a>
-                        <img src="{{asset ('bundles/abuchynalex/images/itemImages/'~item.image) }}">
-                        <p class="post-meta">Posted by <a href="{{ path('abuchyn_alex_about') }}">{{ item.author }}</a> on
-                            {% if item.created %}{{ item.created|date('j F Y g:i a') }}{% endif %}
-                            <br>
-                            {% if item.updated %}Updated {{ item.updated|date('Y-m-d H:i:s') }}{% endif %}
-                        </p>
-                        <a class="btn btn-alexblog" href="{{ path('items_show', { 'id': item.id }) }}">show</a>
-                        <a class="btn btn-alexblog" href="{{ path('items_edit', { 'id': item.id }) }}">edit</a>
-                        <hr>
-                    {% endfor %}
-                </div>
-            </div>
-            {# display navigation #}
+        </div>
+        <div class="col-md-8">
             <div class="pager">
                 {{ knp_pagination_render(items) }}
             </div>
+        </div>
+    </div>
+
+    <div class="col-xs-12"><hr></div>
+
+    <div class="row">
+        <div class="navbar-fixed-right">
+        </div>
+        <div class="post-preview">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                {% for item in items %}
+                    <a href="{{ path('items_show', { 'id': item.id }) }}">
+                        <h2 class="post-title">
+                            {{ item.title }}
+                        </h2>
+                        {#<h3 class="post-subtitle">
+                            Problems look mighty small from 150 miles up
+                        </h3>#}
+                    </a>
+                    <img src="{{asset ('bundles/abuchynalex/images/itemImages/'~item.image) }}">
+                    <p class="post-meta">Posted by <a href="{{ path('abuchyn_alex_about') }}">{{ item.author }}</a> on
+                        {% if item.created %}{{ item.created|date('j F Y g:i a') }}{% endif %}
+                        <br>
+                        {% if item.updated %}Updated {{ item.updated|date('Y-m-d H:i:s') }}{% endif %}
+                    </p>
+                    <a class="btn btn-alexblog" href="{{ path('items_show', { 'id': item.id }) }}">show</a>
+                    <a class="btn btn-alexblog" href="{{ path('items_edit', { 'id': item.id }) }}">edit</a>
+                    <hr>
+                {% endfor %}
+            </div>
+        </div>
+        {# display navigation #}
+        <div class="pager">
+            {{ knp_pagination_render(items) }}
         </div>
     </div>
 {% endblock %}
