--- a/src/Abuchyn/AlexBundle/Resources/views/layout.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/layout.html.twig
@@ -79,25 +79,34 @@
             </div>
         </div>
     </header>
-
+    {# display navigation #}
 {% endblock %}
 
 {% block body %}
 
     <!-- Main Content -->
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="dropdown">
-            <button class="btn btn-alexblog dropdown-toggle" type="button"data-toggle="dropdown">
-                Отсортировать
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu btn-alexblog">
-                <li>{{ knp_pagination_sortable(items, 'Title', 'a.title')|raw }}</li>
-                <li>{{ knp_pagination_sortable(items, 'Author', 'a.author' )|raw }}</li>
-                <li>{{ knp_pagination_sortable(items, 'Created', 'a.created' )}}</li>
-            </ul>
-            <hr>
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="dropdown">
+                    <button class="btn btn-alexblog dropdown-toggle" type="button"data-toggle="dropdown">
+                        Sort by
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu btn-alexblog">
+                        <li>{{ knp_pagination_sortable(items, 'Title', 'a.title')|raw }}</li>
+                        <li>{{ knp_pagination_sortable(items, 'Author', 'a.author' )|raw }}</li>
+                        <li>{{ knp_pagination_sortable(items, 'Created', 'a.created' )}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="pager">
+                    {{ knp_pagination_render(items) }}
+                </div>
+            </div>
         </div>
+        <div class="col-xs-12"><hr></div>
 
         {% for item in items %}
             <div class="row">
@@ -137,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <hr>
+            <div class="col-xs-12"><hr></div>
         {% endfor %}
     </div>
 
@@ -149,7 +158,7 @@
 {% endblock %}
 
 {% block footer%}
-    <hr>
+    <div class="col-xs-12"><hr></div>
     <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
         <ul class="list-inline text-center">
             <li>
