--- a/src/Abuchyn/AlexBundle/Resources/views/Pages/contacts/contacts.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Pages/contacts/contacts.html.twig
@@ -27,7 +27,7 @@
                 <p class='subtitle'>
                     Алексей Бучин
                     <br>
-                    <a href="mailto:@gmail.com" class="site-email">@gmail.com</a>
+                    <a href="mailto:@gmail.com" class="site-email">abuchyn@gmail.com</a>
                 </p>
             </div>
         </div>
