--- a/src/Abuchyn/AlexBundle/Resources/views/layout.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/layout.html.twig
@@ -172,14 +172,6 @@
                 <a href="#">
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                    </span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
                         <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                     </span>
                 </a>
@@ -188,13 +180,21 @@
                 <a href="#">
                     <span class="fa-stack fa-lg">
                         <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
+                    </span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-circle fa-stack-2x"></i>
+                        <i class="fa fa-youtube-play fa-stack-1x fa-inverse"></i>
                     </span>
                 </a>
             </li>
         </ul>
 
-        <p class="copyright text-muted">Copyright &copy; <a href="mailto:@gmail.com" class="site-email">Alexey Buchyn</a> Website 2017 </p>
+        <p class="copyright text-muted">Copyright &copy; <a href="mailto:abuchyn@gmail.com" class="site-email">Alexey Buchyn</a> Website 2017 </p>
 
         <div id="custom-search-input">
             <div class="input-group col-md-12">
