--- a/src/Abuchyn/AlexBundle/Resources/public/css/main.css
+++ b/src/Abuchyn/AlexBundle/Resources/public/css/main.css
@@ -784,3 +784,16 @@ i.fa.fa::before {
 .list-group .list-group-item .list-group-item-heading {color: rgba(0, 0, 0, 0.77);font-size: 20px;line-height: 29px;}
 .list-group .list-group-separator {clear: both;overflow: hidden;margin-top: 10px;margin-bottom: 10px;}
 .list-group .list-group-separator:before {content: "";width: calc(100% - 90px);border-bottom: 1px solid rgba(0, 0, 0, 0.1);float: right;}
+
+
+/*error*/
+.full {
+    background: url(/bundles/abuchynalex/images/maintenance.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    height:100%;
+    color: white;
+    padding-top: 10%;
+}
