--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,9 +4,29 @@
     <meta charset="UTF-8" />
     <title>{% block title %}Alex Buchyn Blog{% endblock %}</title>
 
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
 
-    {% block javascripts %}{% endblock %}
+        {#styles#}
+        <link href="{{ asset('bundles/abuchynalex/css/tether.min.css') }}" rel="stylesheet" />
+        <link href="{{ asset('bundles/abuchynalex/css/bootstrap.min.css') }}" rel="stylesheet" />
+        <link href="{{ asset('bundles/abuchynalex/css/font-awesome.min.css') }}" rel="stylesheet" />
+        <link href="{{ asset('bundles/abuchynalex/css/main.css') }}" rel="stylesheet" />
+
+        {#fonts#}
+        <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet">
+
+    {% endblock %}
+
+    {% block javascripts %}
+
+        <script src="{{ asset('bundles/abuchynalex/js/jquery-3.2.1.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('bundles/abuchynalex/js/tether.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('bundles/abuchynalex/js/bootstrap.min.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('bundles/abuchynalex/js/clean-blog.js') }}" type="text/javascript"></script>
+        <script src="{{ asset('bundles/abuchynalex/js/main.js') }}" type="text/javascript"></script>
+
+    {% endblock %}
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
