--- a/src/Abuchyn/AlexBundle/Resources/views/Pages/errors/not_found.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Pages/errors/not_found.html.twig
@@ -11,15 +11,8 @@
 
 {% block footer %}
     <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
-        <div id="custom-search-input">
-            <div class="input-group col-md-12">
-                <input type="text" class="search-query form-control" placeholder="Search" />
-                <span class="input-group-btn">
-                    <button class="btn btn-danger" type="button">
-                        <span class="glyphicon glyphicon-search"></span>
-                    </button>
-                </span>
-            </div>
-        </div>
+        {% block search %}
+            {{ parent() }}
+        {% endblock %}
     </div>
 {% endblock %}
