change not_found route

--- a/src/Abuchyn/AlexBundle/Resources/views/Pages/errors/not_found.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Pages/errors/not_found.html.twig
@@ -1,9 +1,16 @@
 {% extends 'AbuchynAlexBundle::layout.html.twig' %}
 
+{% block author %}
+
+{% endblock %}
+
+{% block info %}
+    <h2>Nothing found</h2>
+{% endblock %}
+
 {% block body %}
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="row">
-            <h2>Nothing found</h2>
             <p>Sorry, but nothing matched your search criteria. Please try again with some different keyword.</p>
         </div>
     </div>
