--- a/src/Abuchyn/AlexBundle/Resources/views/Exception/maintenance.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Exception/maintenance.html.twig
@@ -1,5 +1,7 @@
 {% extends '::base.html.twig' %}
 
+{%  block title %} Maintenance {% endblock %}
+
 {% block body %}
     <body class="full">
         <div class="row text-center">
