--- a/src/Abuchyn/AlexBundle/Resources/views/Exception/not_found.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Exception/not_found.html.twig
@@ -1,5 +1,7 @@
 {% extends 'AbuchynAlexBundle::layout.html.twig' %}
 
+{%  block title %} Not found {% endblock %}
+
 {% block author %}
 
 {% endblock %}
@@ -10,7 +12,7 @@
 
 {% block body %}
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="row">
+        <div class="row text-center">
             <p>Sorry, but nothing matched your search criteria. Please try again with some different keyword.</p>
         </div>
     </div>
