validator for new post form

--- a/src/Abuchyn/AlexBundle/Resources/views/Admin/items/new.html.twig
+++ b/src/Abuchyn/AlexBundle/Resources/views/Admin/items/new.html.twig
@@ -13,10 +13,10 @@
 {% endblock %}
 
 {% block body %}
-
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <input class="btn btn-alexblog" type="submit" value="Create" />
-    {{ form_end(form) }}
-
+    <form class="form" method="post" novalidate>
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <input class="btn btn-alexblog" type="submit" value="Create" />
+        {{ form_end(form) }}
+    </form>
 {% endblock %}
